# Smoke

./: .gitignore  .travis.yml  README.md  build.gradle  gradle.properties  settings.gradle
app/: .gitignore  build.gradle  gradle.properties  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
smoke/: .gitignore  CMakeLists.txt  build.gradle  gradle.properties
smoke-android/: CMakeLists.txt  build.gradle  gradle.properties  proguard-rules.pro
smoke-android-file/: README.md  build.gradle  decode_mars_log_file.py  gradle.properties
smoke-android-file/src/main/: AndroidManifest.xml
smoke-android-file/src/main/cpp/: autobuffer.cpp  bootrun.h  log_buffer.cpp  smoke_appender.cpp  smoke_appender.h  smoke_base.cpp  smoke_base.h  smoke_jni.cpp  smoke_jni_log.cpp  smoke_jni_log.h  smoke_log.cpp  smoke_version.h
smoke-android-file/src/main/cpp/test/: smoke_jni_test.cpp
smoke-android-file/src/main/res/values/: strings.xml
smoke-android/src/main/: AndroidManifest.xml
smoke-android/src/main/cpp/: ptrbuffer.cpp  smoke_appender.h  smoke_log.cpp  tickcount.cpp
smoke-android/src/main/cpp/coffeecatch/: coffeecatch.c
smoke-android/src/main/res/values/: strings.xml
smoke-java/: build.gradle  gradle.properties  smoke_retrace.sh
smoke-java/src/main/java/com/mingyuans/smoke/: CollectionUtil.java  ConsolePrinter.java  DrawBoxProcess.java  ISmoke.java  Smoke.java  (+5 more)
smoke-kotlin/: build.gradle
smoke-kotlin/src/test/kotlin/: SmokeTest.kt
smoke/src/androidTest/java/com/mingyuans/smoke/: BaseTestUnit.java  ExampleInstrumentedTest.java  JniFileUtilTest.java  ProcessesTest.java  SmokeJniTest.java  SmokeTest.java  SmokeUncaughtErrorHandlerTest.java
smoke/src/main/: AndroidManifest.xml
smoke/src/main/cpp/: appender.cpp  appender.h  log_buffer.cpp  log_buffer.h  log_formater.cpp  mmap_file.cpp  mmap_file.h  native-lib.cpp  ptrbuffer.cpp  ptrbuffer.h  smoke_appender.cpp  smoke_appender.h  smoke_base.cpp  smoke_base.h  smoke_jni.cpp  smoke_jni_log.cpp  smoke_jni_log.h  smoke_log.h  smoke_version.h  thread_info.cpp
smoke/src/main/cpp/crypt/: log_crypt.cpp
smoke/src/main/cpp/smoke_utils/: file_util.cpp  file_util.h  mmap_util.cpp  mmap_util.h  strutil.cpp
smoke/src/main/cpp/test/: smoke_jni_test.cpp  smoke_jni_test.h
smoke/src/main/cpp/thread/: condition.h  thread.h
smoke/src/main/java/com/mingyuans/smoke/: CollectionUtil.java  ConsolePrinter.java  DefaultPrintPlugin.java  DrawBoxProcess.java  ISmoke.java  LineInitialProcess.java  Printer.java  Processes.java  Smoke.java  SmokeFilePrinter.java  SmokeSub.java  SmokeUncaughtErrorHandler.java  StringUtil.java  SubSmoke.java
smoke/src/test/java/com/mingyuans/smoke/: ExampleUnitTest.java
(+26 files in other folders)
